# 1DfiniteVolumes

./: LICENSE  README.md  pyproject.toml
finVols1D/: __init__.py  runTime.py  turbulenceModels.py
finVols1D/fv/: __init__.py  fvBoundaries.py  fvEquations.py  fvFields.py  fvMesh.py  fvTools.py
finVols1D/fv/fvSchemes/: divSchemes.py
src/: __init__.py  fvBoundaries.py  fvEquations.py  fvFields.py  fvMesh.py  fvTools.py  runTime.py
tests/: heatDiffusion_stationary.py  rouseProfile.py
tutorials/: 1D_sedim.py  burgers_wave.py  channel.py  duneAdvection.py  heatDiffusion_stationary.py  rouseProfile.py  sedimBed.py
