[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finVols1D"
version = "0.0.1"
authors = [
  { name="Matthias RENAUD", email="mtthsrenaud@gmail.com" },
]
description = "A small package to run 1D finite volumes simulations"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Renaud-Matthias/1DfiniteVolumes"
Issues = "https://github.com/Renaud-Matthias/1DfiniteVolumes/issues"
